# ICG_Final_1

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: camera.rs  color.rs  disk.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs
