[package]
name = "icg_final_1"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
image = { version = "0.25.6", optional = true }
indicatif = "0.17.11"
log = "0.4.27"
nalgebra = "0.33.2"
rand = "0.9.1"
rayon = { version = "1.10.0", optional = true }

[features]
rayon = ["dep:rayon", "indicatif/rayon"]
image = ["dep:image"]
default = ["rayon", "image"]
